--- a/assets/css/itinerary.css
+++ b/assets/css/itinerary.css
@@ -33,7 +33,7 @@
     padding-bottom: 10px;
     margin-right: 30px;
     text-align: center;
-    color: white;
+    color: navy;
   }
   
   .hide {
@@ -79,12 +79,12 @@
   .dropdown-toggle{  
   margin: auto;
   display: block;
-  width: 25%;
+  width: 30%;
   }
 
   .dropdown-menu {
     margin: auto;
-    width: 25%;
+    width: 30%;
     text-align: center;
     background-color: #c1c2c3;
   }
