--- a/assets/css/itinerary.css
+++ b/assets/css/itinerary.css
@@ -1,6 +1,8 @@
 .itineraryCon {
   float: left;
   background-color: white;
+  width: 100%;
+
   
 }
 
@@ -11,7 +13,6 @@
     resize: none;
     color: #000000;
     border-left: 1px solid black;
-    padding: 10px;
   }
   
 
