--- a/assets/css/places.css
+++ b/assets/css/places.css
@@ -35,13 +35,13 @@ form {
     display: block;
     align-items: center;
     margin-top: 5%;
-    margin-left: 20%;
+    /* margin-left: 20%; */
     margin-bottom: 5%;
 
 }
 
 .scroller {
-    width: 450px;
+    width: 98%;
     height: 650px;
     overflow-y: scroll;
     scrollbar-width: thin;
@@ -50,11 +50,6 @@ form {
     border: 5pt solid white;
     align-items: center;
     margin-top: 5%;
-    margin-left: 20%;
+    margin-left: 1%;
     margin-bottom: 5%;
-}
-.budgetPic {
-    float: left;
-    height: 500px;
-    width: 500px;
 }
