--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 16px;
   text-align: center;
+  width: auto;
   background-color: white;
 }
 
@@ -15,6 +16,14 @@ body {
   background-color: #ffffff;
   color: #ffffff;
   text-transform: uppercase;
+}
+
+.topSection {
+  width: 100%;
+}
+
+.secondSection {
+
 }
 
 .headertext {
@@ -66,7 +75,7 @@ footer {
   background-color: rgba(220, 220, 220, 0.954);
   padding-top: 20px;
   text-align: center;
-  position: absolute;
+  position: static   ;
   height: 15%;
   margin-top: 75px;
 }
