--- a/assets/css/itinerary.css
+++ b/assets/css/itinerary.css
@@ -1,8 +1,6 @@
 .itineraryCon {
   float: left;
   background-color: white;
-  width: 100%;
-
   
 }
 
@@ -13,6 +11,7 @@
     resize: none;
     color: #000000;
     border-left: 1px solid black;
+    padding: 10px;
   }
   
 
@@ -53,7 +52,7 @@
   .day {
     background-color: #ffffff;
     color: #000000;
-    border-top: 1px dashed ;
+    align-content: center;
   }
   
   
@@ -80,12 +79,12 @@
   .dropdown-toggle{  
   margin: auto;
   display: block;
-  width: 30%;
+  width: 70%;
   }
 
   .dropdown-menu {
     margin: auto;
-    width: 30%;
+    width: 70%;
     text-align: center;
     background-color: #c1c2c3;
   }
