--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,18 +19,19 @@ body {
 }
 
 .topSection {
-  width: 100%;
+  width: 100%
 }
 
 .secondSection {
+  width: 100%;
 
 }
 
 .headertext {
-  position: relative-absolute;
+  position: absolute;
   width: 20%;
-  top: 45%;
-  left: 50%;
+  top: 40%;
+  left: 40%;
 }
 
 .headertext2 {
@@ -42,7 +43,7 @@ body {
 }
 .headertext3 {
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: Arial, Helvetica, sans-serif;
@@ -60,7 +61,7 @@ color: #000000;
 
 button, input {
   overflow: auto;
-}
+}  
 
 
 
