--- a/assets/css/weather.css
+++ b/assets/css/weather.css
@@ -1,20 +1,24 @@
 
-#dashboard{
-    text-align: center;
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: rgb(212, 82, 53);
-    background-image:url("./images/weatherbackground.png");
-    background-size: cover;
-    height: 100%;
-}
 .weather {
+    align-items: center;
     background-color: white;
     padding-top: 5%;
+    width: 100%;
+
 } 
 
+.weather h4 {
+text-align: center;
+}
+
 .card-body{
+    text-align: center;
     background-color:  #c1c2c3;
     color: #000000;
-    width: auto;
+    /* width: 100%; */
 
+}
+
+.row {
+    align-items: center;
 }
